# backvault

./: .env-example  .gitignore  Dockerfile  README.md  cleanup.sh  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
src/: bw_client.py  db.py  form.html  init.py  initial_setup.py  run.py
